# competitive-generator

./: .gitignore  README.md  defaultCMakeLists.txt  generator.py
example/: checker.cpp  generator.cpp  problemCMakeLists.txt  smart.cpp
example/c++17/: checker.cpp  config.ini  debug.h  generator.cpp  problemCMakeLists.txt  smart.cpp
example/c++20/: config.ini  debug.h
example/c++23/: debug.h  problemCMakeLists.txt
example/default/: checker.cpp  config.ini  debug.h  generator.cpp  smart.cpp  stupid.cpp
example/grader/: checker.cpp  debug.h  main.cpp  problemCMakeLists.txt
templates/: mainCMakeLists.txt
templates/c++17/: CMakeLists.txt  smart.cpp
templates/c++20/: CMakeLists.txt  smart.cpp
templates/c++23/: generator.cpp  stupid.cpp
templates/grader/: stress.py
templates/grader17/: config.ini  generator.cpp  stupid.cpp
templates/grader23/: CMakeLists.txt  checker.cpp  config.ini  main.cpp  stupid.cpp
utils/: config.py  stress.py
utils/checkers/: wcmp.cpp
